--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -14,6 +14,7 @@ ru:
       submit: Опубликовать
     show:
       all_posts: Все посты
+      comments: Комментарии
     comment_form:
       response: Ответить
   activerecord:
