--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,6 +9,7 @@ ru:
   posts:
     index:
       title: Коллективный блог
+      liked_count: "Понравилось: %{count}"
     new:
       title: Новый пост
       submit: Опубликовать
