--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,7 @@ ru:
       submit: Опубликовать
     show:
       all_posts: Все посты
+      comments: Комментарии
     create:
       success: Пост опубликован
       unprocessable_entity: Не удалось создать пост. Проверьте введенные данные
